--- a/StormPC/StormPC/Views/Login/LoginWindow.xaml
+++ b/StormPC/StormPC/Views/Login/LoginWindow.xaml
@@ -29,6 +29,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Logo -->
@@ -90,6 +91,13 @@
                 Style="{StaticResource AccentButtonStyle}"
                 HorizontalAlignment="Center"
                 Click="OnLoginClick"/>
+                
+        <TextBlock Grid.Row="4"
+                  Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}"
+                  HorizontalAlignment="Center"
+                  Margin="0,15,0,0"
+                  Opacity="0.7"
+                  FontSize="12"/>
 
         <winui:ContentDialog x:Name="RecoverAccountDialog"
                       Title="Recover Account"
