--- a/StormPC/StormPC/Views/Orders/OrderListPage.xaml
+++ b/StormPC/StormPC/Views/Orders/OrderListPage.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:local="using:StormPC.Views.Orders"
+    xmlns:sharedControls="using:StormPC.Controls"
     mc:Ignorable="d"
     Loaded="Page_Loaded">
 
@@ -81,6 +82,11 @@
         </Grid>
 
         <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
             <controls:DataGrid x:Name="OrdersDataGrid"
                              ItemsSource="{x:Bind ViewModel.Orders, Mode=OneWay}"
                              AutoGenerateColumns="False"
@@ -168,9 +174,14 @@
                 </controls:DataGrid.Columns>
             </controls:DataGrid>
 
+            <sharedControls:PaginationControl Grid.Row="1"
+                                    CurrentPage="{x:Bind ViewModel.CurrentPage, Mode=TwoWay}"
+                                    TotalPages="{x:Bind ViewModel.TotalPages, Mode=OneWay}"
+                                    PageChanged="PaginationControl_PageChanged"/>
+
             <ProgressRing IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}"
-                         Width="50" 
-                         Height="50"/>
+                          Width="50" 
+                          Height="50"/>
         </Grid>
     </Grid>
 </Page> 
