--- a/StormPC/StormPC/Views/Controls/PaginationControl.xaml
+++ b/StormPC/StormPC/Views/Controls/PaginationControl.xaml
@@ -9,24 +9,30 @@
 
     <StackPanel Orientation="Horizontal" 
                 HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
                 Spacing="8"
                 Margin="0,20,0,0">
         <Button x:Name="PreviousButton"
                 Click="PreviousButton_Click"
                 Style="{ThemeResource AccentButtonStyle}"
                 Width="40"
-                Height="40"
-                CornerRadius="20">
+                Height="32"
+                CornerRadius="4"
+                VerticalAlignment="Center">
             <FontIcon Glyph="&#xE72B;" FontSize="12"/>
         </Button>
 
-        <TextBox x:Name="CurrentPageBox"
-                 Text="{x:Bind CurrentPage, Mode=TwoWay}"
-                 TextAlignment="Center"
-                 Width="60"
-                 Height="40"
-                 BeforeTextChanging="CurrentPageBox_BeforeTextChanging"
-                 KeyDown="CurrentPageBox_KeyDown"/>
+        <Grid VerticalAlignment="Center" Height="32">
+            <TextBox x:Name="CurrentPageBox"
+                     Text="{x:Bind CurrentPage, Mode=TwoWay}"
+                     TextAlignment="Center"
+                     MinWidth="32"
+                     Height="32"
+                     VerticalAlignment="Center"
+                     VerticalContentAlignment="Center"
+                     BeforeTextChanging="CurrentPageBox_BeforeTextChanging"
+                     KeyDown="CurrentPageBox_KeyDown"/>
+        </Grid>
 
         <TextBlock Text="/" 
                   VerticalAlignment="Center"
@@ -40,8 +46,9 @@
                 Click="NextButton_Click"
                 Style="{ThemeResource AccentButtonStyle}"
                 Width="40"
-                Height="40"
-                CornerRadius="20">
+                Height="32"
+                CornerRadius="4"
+                VerticalAlignment="Center">
             <FontIcon Glyph="&#xE72A;" FontSize="12"/>
         </Button>
     </StackPanel>
