--- a/StormPC/StormPC/Views/Controls/PaginationControl.xaml
+++ b/StormPC/StormPC/Views/Controls/PaginationControl.xaml
@@ -14,10 +14,30 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
+<!-- 
+        <TextBlock Text="Số mục mỗi trang:" 
+                  Grid.Column="0"
+                  VerticalAlignment="Center"
+                  Margin="0,0,8,0"/> -->
+
+        <ComboBox x:Name="PageSizeComboBox"
+                  Grid.Column="1"
+                  Width="65"
+                  Height="32"
+                  Margin="0,0,16,0"
+                  SelectedValue="{x:Bind PageSize, Mode=TwoWay}"
+                  SelectionChanged="PageSizeComboBox_SelectionChanged">
+            <x:Int32>10</x:Int32>
+            <x:Int32>20</x:Int32>
+            <x:Int32>30</x:Int32>
+            <x:Int32>50</x:Int32>
+        </ComboBox>
 
         <Button x:Name="PreviousButton"
-                Grid.Column="0"
+                Grid.Column="2"
                 Click="PreviousButton_Click"
                 Style="{ThemeResource AccentButtonStyle}"
                 Width="40"
@@ -28,7 +48,7 @@
         </Button>
 
         <TextBox x:Name="CurrentPageBox"
-                 Grid.Column="1"
+                 Grid.Column="3"
                  Text="{x:Bind CurrentPage, Mode=TwoWay}"
                  TextAlignment="Center"
                  MinWidth="32"
@@ -39,19 +59,19 @@
                  BeforeTextChanging="CurrentPageBox_BeforeTextChanging"
                  KeyDown="CurrentPageBox_KeyDown"/>
 
-        <TextBlock Grid.Column="2"
+        <TextBlock Grid.Column="4"
                   Text="/" 
                   Margin="0,0,8,0"
                   VerticalAlignment="Center"
                   Foreground="{ThemeResource SystemBaseMediumColor}"/>
 
-        <TextBlock Grid.Column="3"
+        <TextBlock Grid.Column="5"
                   x:Name="TotalPagesText"
                   Text="{x:Bind TotalPages, Mode=OneWay}"
                   Margin="0,0,8,0"
                   VerticalAlignment="Center"/>
 
-        <Button Grid.Column="4"
+        <Button Grid.Column="6"
                 x:Name="NextButton"
                 Click="NextButton_Click"
                 Style="{ThemeResource AccentButtonStyle}"
