--- a/StormPC/StormPC/Views/BaseData/CategoriesPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/CategoriesPage.xaml
@@ -180,7 +180,9 @@
             <sharedControls:PaginationControl Grid.Row="1"
                                     CurrentPage="{x:Bind ViewModel.CurrentPage, Mode=TwoWay}"
                                     TotalPages="{x:Bind ViewModel.TotalPages, Mode=OneWay}"
-                                    PageChanged="PaginationControl_PageChanged"/>
+                                    PageSize="{x:Bind ViewModel.PageSize, Mode=TwoWay}"
+                                    PageChanged="PaginationControl_PageChanged"
+                                    PageSizeChanged="PaginationControl_PageSizeChanged"/>
 
             <ProgressRing IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}"
                           Width="50" 
